--- a/Faveo Helpdesk Pro/ar.lproj/Main.strings
+++ b/Faveo Helpdesk Pro/ar.lproj/Main.strings
@@ -1,75 +1,75 @@
 
 /* Class = "UILabel"; text = "Closed tickets"; ObjectID = "00M-ZV-gxI"; */
-"00M-ZV-gxI.text" = "Closed tickets";
+"00M-ZV-gxI.text" = "تذاكر مغلقة";
 
 /* Class = "UILabel"; text = "Last Name"; ObjectID = "0LL-vd-wv1"; */
-"0LL-vd-wv1.text" = "Last Name";
+"0LL-vd-wv1.text" = "الكنية";
 
 /* Class = "UILabel"; text = "Email"; ObjectID = "6Mo-Z2-qgf"; */
-"6Mo-Z2-qgf.text" = "Email";
+"6Mo-Z2-qgf.text" = "البريد الإلكتروني";
 
 /* Class = "UILabel"; text = "Subject*"; ObjectID = "7x1-4m-H9y"; */
-"7x1-4m-H9y.text" = "Subject*";
+"7x1-4m-H9y.text" = "موضوع*";
 
 /* Class = "UILabel"; text = "Ticket Type"; ObjectID = "8P0-x8-YwZ"; */
-"8P0-x8-YwZ.text" = "Ticket Type";
+"8P0-x8-YwZ.text" = "نوع التذكرة";
 
 /* Class = "UILabel"; text = "Settings"; ObjectID = "9Z7-uO-fAa"; */
-"9Z7-uO-fAa.text" = "Settings";
+"9Z7-uO-fAa.text" = "إعدادات";
 
 /* Class = "UILabel"; text = "My tickets"; ObjectID = "AwE-I0-oTJ"; */
-"AwE-I0-oTJ.text" = "My tickets";
+"AwE-I0-oTJ.text" = "تذاكري";
 
 /* Class = "UILabel"; text = "ACTIVE"; ObjectID = "B1T-Ry-EJE"; */
-"B1T-Ry-EJE.text" = "ACTIVE";
+"B1T-Ry-EJE.text" = "نشيط";
 
 /* Class = "UILabel"; text = "user_nameLabel"; ObjectID = "Dzc-oI-1TH"; */
-"Dzc-oI-1TH.text" = "user_nameLabel";
+"Dzc-oI-1TH.text" = "";
 
 /* Class = "UILabel"; text = "Subject"; ObjectID = "E1F-Az-9Gv"; */
-"E1F-Az-9Gv.text" = "Subject";
+"E1F-Az-9Gv.text" = "موضوع";
 
 /* Class = "UITextField"; placeholder = "Select Priority"; ObjectID = "Fgz-Q4-nRj"; */
-"Fgz-Q4-nRj.placeholder" = "Select Priority";
+"Fgz-Q4-nRj.placeholder" = "حدد الأولوية";
 
 /* Class = "UILabel"; text = "HelpTopics"; ObjectID = "G6t-w8-5gE"; */
-"G6t-w8-5gE.text" = "HelpTopics";
+"G6t-w8-5gE.text" = "";
 
 /* Class = "UITextField"; placeholder = "Ex: 9999999999"; ObjectID = "Gsy-RY-3zo"; */
 "Gsy-RY-3zo.placeholder" = "Ex: 9999999999";
 
 /* Class = "UISegmentedControl"; GzN-Yn-vAw.segmentTitles[0] = "Conversation"; ObjectID = "GzN-Yn-vAw"; */
-"GzN-Yn-vAw.segmentTitles[0]" = "Conversation";
+"GzN-Yn-vAw.segmentTitles[0]" = "محادثة";
 
 /* Class = "UISegmentedControl"; GzN-Yn-vAw.segmentTitles[1] = "Details"; ObjectID = "GzN-Yn-vAw"; */
-"GzN-Yn-vAw.segmentTitles[1]" = "Details";
+"GzN-Yn-vAw.segmentTitles[1]" = "تفاصيل";
 
 /* Class = "UILabel"; text = "xxxxx@xxx.com"; ObjectID = "H5i-YI-b5K"; */
 "H5i-YI-b5K.text" = "xxxxx@xxx.com";
 
-/* Class = "UILabel"; text = "Priority"; ObjectID = "ImK-IA-DcU"; */
+/* Class = "UILabel"; text = "أفضلية"; ObjectID = "ImK-IA-DcU"; */
 "ImK-IA-DcU.text" = "Priority";
 
 /* Class = "UILabel"; text = "Unassigned tickets"; ObjectID = "K2r-lG-27s"; */
-"K2r-lG-27s.text" = "Unassigned tickets";
+"K2r-lG-27s.text" = "تذاكر غير مخصصة";
 
 /* Class = "UILabel"; text = "Message*"; ObjectID = "KL7-aF-noB"; */
-"KL7-aF-noB.text" = "Message*";
+"KL7-aF-noB.text" = "رسالة*";
 
 /* Class = "UILabel"; text = "Ticket list"; ObjectID = "Kwa-ua-KzA"; */
-"Kwa-ua-KzA.text" = "Ticket list";
+"Kwa-ua-KzA.text" = "قائمة التذاكر";
 
 /* Class = "UILabel"; text = "COMPANY'S URL"; ObjectID = "NvZ-jN-SUK"; */
-"NvZ-jN-SUK.text" = "COMPANY'S URL";
+"NvZ-jN-SUK.text" = "عنوان الشركة";
 
 /* Class = "UILabel"; text = "Logout"; ObjectID = "Nwy-MN-km4"; */
-"Nwy-MN-km4.text" = "Logout";
+"Nwy-MN-km4.text" = "الخروج";
 
 /* Class = "UITextField"; placeholder = "Select Helptopic"; ObjectID = "OIR-WQ-j9s"; */
 "OIR-WQ-j9s.placeholder" = "Select Helptopic";
 
 /* Class = "UILabel"; text = "Password"; ObjectID = "OQM-lN-xDk"; */
-"OQM-lN-xDk.text" = "Password";
+"OQM-lN-xDk.text" = "كلمه السر";
 
 /* Class = "UILabel"; text = "+91 999999999"; ObjectID = "OTI-p0-kg7"; */
 "OTI-p0-kg7.text" = "+91 999999999";
@@ -81,103 +81,103 @@
 "QyC-lw-kS2.text" = "HelpTopics*";
 
 /* Class = "UILabel"; text = "Code"; ObjectID = "UFg-tX-fNF"; */
-"UFg-tX-fNF.text" = "Code";
+"UFg-tX-fNF.text" = "الشفرة";
 
 /* Class = "UIButton"; normalTitle = "Submit"; ObjectID = "Unu-1C-zRF"; */
-"Unu-1C-zRF.normalTitle" = "Submit";
+"Unu-1C-zRF.normalTitle" = "خضع";
 
 /* Class = "UILabel"; text = "ClientName"; ObjectID = "Uyc-xp-Avp"; */
-"Uyc-xp-Avp.text" = "ClientName";
+"Uyc-xp-Avp.text" = "اسم العميل";
 
 /* Class = "UITextField"; placeholder = "Select Source"; ObjectID = "VJe-Gu-Kf0"; */
-"VJe-Gu-Kf0.placeholder" = "Select Source";
+"VJe-Gu-Kf0.placeholder" = "اختر مصدر";
 
 /* Class = "UIButton"; normalTitle = "Login"; ObjectID = "VP0-T6-DvK"; */
-"VP0-T6-DvK.normalTitle" = "Login";
+"VP0-T6-DvK.normalTitle" = "تسجيل الدخول";
 
 /* Class = "UILabel"; text = "Client list"; ObjectID = "Xj6-wM-O9Q"; */
-"Xj6-wM-O9Q.text" = "Client list";
+"Xj6-wM-O9Q.text" = "قائمة العملاء";
 
 /* Class = "UILabel"; text = "-------"; ObjectID = "Xmx-EM-axR"; */
 "Xmx-EM-axR.text" = "-------";
 
 /* Class = "UILabel"; text = "Created Date"; ObjectID = "YWC-xC-yYI"; */
-"YWC-xC-yYI.text" = "Created Date";
+"YWC-xC-yYI.text" = "تاريخ الإنشاء";
 
 /* Class = "UILabel"; text = "Inbox tickets"; ObjectID = "Z79-JG-G6l"; */
-"Z79-JG-G6l.text" = "Inbox tickets";
+"Z79-JG-G6l.text" = "تذاكر علبة الوارد";
 
 /* Class = "UILabel"; text = "Faveo HELPDESK"; ObjectID = "ZIG-RQ-ubz"; */
 "ZIG-RQ-ubz.text" = "Faveo HELPDESK";
 
 /* Class = "UILabel"; text = "About"; ObjectID = "aVs-YL-pOr"; */
-"aVs-YL-pOr.text" = "About";
+"aVs-YL-pOr.text" = "حول";
 
 /* Class = "UITextField"; placeholder = "Select Ticket type"; ObjectID = "cnf-mc-DUb"; */
-"cnf-mc-DUb.placeholder" = "Select Ticket type";
+"cnf-mc-DUb.placeholder" = "اختر نوع التذكرة";
 
 /* Class = "UIButton"; normalTitle = "Website"; ObjectID = "dBA-ZM-uZ7"; */
-"dBA-ZM-uZ7.normalTitle" = "Website";
+"dBA-ZM-uZ7.normalTitle" = "موقع الكتروني";
 
 /* Class = "UILabel"; text = "version: 1.7"; ObjectID = "dkk-3v-jiw"; */
-"dkk-3v-jiw.text" = "version: 1.7";
+"dkk-3v-jiw.text" = "الإصدار: 1.7";
 
 /* Class = "UILabel"; text = "user_role"; ObjectID = "eaU-wh-His"; */
 "eaU-wh-His.text" = "user_role";
 
 /* Class = "UILabel"; text = "Mobile"; ObjectID = "eiY-Rq-ac5"; */
-"eiY-Rq-ac5.text" = "Mobile";
+"eiY-Rq-ac5.text" = "التليفون المحمول";
 
 /* Class = "UILabel"; text = "user_url"; ObjectID = "ghH-8G-sXb"; */
 "ghH-8G-sXb.text" = "user_url";
 
 /* Class = "UILabel"; text = "First Name*"; ObjectID = "hNf-fP-ORr"; */
-"hNf-fP-ORr.text" = "First Name*";
+"hNf-fP-ORr.text" = "الاسم الاول*";
 
 /* Class = "UITextField"; placeholder = "Ex: +91"; ObjectID = "ist-CM-MqC"; */
 "ist-CM-MqC.placeholder" = "Ex: +91";
 
 /* Class = "UILabel"; text = "Trash tickets"; ObjectID = "jNK-32-X7O"; */
-"jNK-32-X7O.text" = "Trash tickets";
+"jNK-32-X7O.text" = "تذاكر القمامة";
 
 /* Class = "UILabel"; text = "Priority*"; ObjectID = "mCO-gF-wNs"; */
-"mCO-gF-wNs.text" = "Priority*";
+"mCO-gF-wNs.text" = "أفضلية*";
 
 /* Class = "UILabel"; text = "Email*"; ObjectID = "mEi-tm-bVi"; */
-"mEi-tm-bVi.text" = "Email*";
+"mEi-tm-bVi.text" = "البريد الإلكتروني*";
 
 /* Class = "UILabel"; text = "Create ticket"; ObjectID = "oTB-RY-cvo"; */
-"oTB-RY-cvo.text" = "Create ticket";
+"oTB-RY-cvo.text" = "إنشاء تذكرة";
 
 /* Class = "UILabel"; text = "status"; ObjectID = "ov5-ne-izY"; */
-"ov5-ne-izY.text" = "status";
+"ov5-ne-izY.text" = "الحالة";
 
 /* Class = "UILabel"; text = "Username/Email"; ObjectID = "p7x-HL-8O0"; */
-"p7x-HL-8O0.text" = "Username/Email";
+"p7x-HL-8O0.text" = "اسم المستخدم / البريد الإلكتروني";
 
 /* Class = "UILabel"; text = "Source"; ObjectID = "trq-0Z-m8M"; */
-"trq-0Z-m8M.text" = "Source";
+"trq-0Z-m8M.text" = "مصدر";
 
 /* Class = "UITextField"; placeholder = "Select Priority"; ObjectID = "uMQ-L7-CIX"; */
-"uMQ-L7-CIX.placeholder" = "Select Priority";
+"uMQ-L7-CIX.placeholder" = "حدد الأولوية";
 
 /* Class = "UILabel"; text = "Last Response date"; ObjectID = "v6I-fo-Qk7"; */
-"v6I-fo-Qk7.text" = "Last Response date";
+"v6I-fo-Qk7.text" = "تاريخ الاستجابة الأخير";
 
 /* Class = "UITextField"; placeholder = "Select Helptopic"; ObjectID = "vCW-en-No4"; */
-"vCW-en-No4.placeholder" = "Select Helptopic";
+"vCW-en-No4.placeholder" = "حدد Helptopic";
 
 /* Class = "UITextField"; placeholder = "e.g http://faveohelpdesk.com/support"; ObjectID = "w0x-e5-ocS"; */
 "w0x-e5-ocS.placeholder" = "e.g http://faveohelpdesk.com/support";
 
 /* Class = "UIButton"; normalTitle = "Save"; ObjectID = "w8G-FB-g9d"; */
-"w8G-FB-g9d.normalTitle" = "Save";
+"w8G-FB-g9d.normalTitle" = "حفظ";
 
 /* Class = "UILabel"; text = "Name"; ObjectID = "wMb-MW-vQq"; */
-"wMb-MW-vQq.text" = "Name";
+"wMb-MW-vQq.text" = "اسم";
 
 /* Class = "UILabel"; text = "Due Date"; ObjectID = "xFf-Wq-nyR"; */
-"xFf-Wq-nyR.text" = "Due Date";
+"xFf-Wq-nyR.text" = "تاريخ الاستحقاق";
 
 /* Class = "UILabel"; text = "www.faveohelpdesk.com"; ObjectID = "xol-WZ-dRz"; */
 "xol-WZ-dRz.text" = "www.faveohelpdesk.com";
