--- a/Faveo Helpdesk Pro/es.lproj/Main.strings
+++ b/Faveo Helpdesk Pro/es.lproj/Main.strings
@@ -93,7 +93,7 @@
 "SbQ-76-SUZ.placeholder" = "Seleccionar Estado";
 
 /* Class = "UILabel"; text = "Code"; ObjectID = "UFg-tX-fNF"; */
-"UFg-tX-fNF.text" = "Code";
+"UFg-tX-fNF.text" = "código";
 
 /* Class = "UIButton"; normalTitle = "Submit"; ObjectID = "Unu-1C-zRF"; */
 "Unu-1C-zRF.normalTitle" = "Presentar";
@@ -132,7 +132,7 @@
 "cF2-G6-BWv.placeholder" = "Seleccionar Dept";
 
 /* Class = "UIButton"; normalTitle = "Website"; ObjectID = "dBA-ZM-uZ7"; */
-"dBA-ZM-uZ7.normalTitle" = "Website";
+"dBA-ZM-uZ7.normalTitle" = "Sitio web";
 
 /* Class = "UILabel"; text = "version: 1.0"; ObjectID = "dkk-3v-jiw"; */
 "dkk-3v-jiw.text" = "Versión: 1.0";
@@ -144,7 +144,7 @@
 "eiY-Rq-ac5.text" = "Teléfono";
 
 /* Class = "UILabel"; text = "First Name*"; ObjectID = "hNf-fP-ORr"; */
-"hNf-fP-ORr.text" = "First Name*";
+"hNf-fP-ORr.text" = "Nombre de pila*";
 
 /* Class = "UITextField"; placeholder = "Ex: +91"; ObjectID = "ist-CM-MqC"; */
 "ist-CM-MqC.placeholder" = "Ex: +91";
