--- a/Faveo Helpdesk Pro/nb.lproj/Main.strings
+++ b/Faveo Helpdesk Pro/nb.lproj/Main.strings
@@ -1,48 +1,48 @@
 
 /* Class = "UILabel"; text = "Closed tickets"; ObjectID = "00M-ZV-gxI"; */
-"00M-ZV-gxI.text" = "Closed tickets";
+"00M-ZV-gxI.text" = "Lukkede billetter";
 
 /* Class = "UILabel"; text = "New Ticket Title"; ObjectID = "3XU-7w-abR"; */
-"3XU-7w-abR.text" = "New Ticket Title";
+"3XU-7w-abR.text" = "Nytt billettittel";
 
 /* Class = "UILabel"; text = "Source"; ObjectID = "5En-Bl-74l"; */
-"5En-Bl-74l.text" = "Source";
+"5En-Bl-74l.text" = "Kilde";
 
 /* Class = "UILabel"; text = "Ticket Types"; ObjectID = "5kR-yv-mFA"; */
-"5kR-yv-mFA.text" = "Ticket Types";
+"5kR-yv-mFA.text" = "Billetttyper";
 
 /* Class = "UIButton"; normalTitle = "Save"; ObjectID = "6vw-77-khz"; */
-"6vw-77-khz.normalTitle" = "Save";
+"6vw-77-khz.normalTitle" = "Lagre";
 
 /* Class = "UILabel"; text = "Select Parent Ticket"; ObjectID = "7Sb-tg-TnM"; */
-"7Sb-tg-TnM.text" = "Select Parent Ticket";
+"7Sb-tg-TnM.text" = "Velg foreldre billett";
 
 /* Class = "UITextField"; placeholder = "click here to select agent"; ObjectID = "7Xy-lN-YQm"; */
-"7Xy-lN-YQm.placeholder" = "click here to select agent";
+"7Xy-lN-YQm.placeholder" = "Klikk her for å velge agent";
 
 /* Class = "UILabel"; text = "Subject*"; ObjectID = "7x1-4m-H9y"; */
-"7x1-4m-H9y.text" = "Subject*";
+"7x1-4m-H9y.text" = "Emne*";
 
 /* Class = "UILabel"; text = "Settings"; ObjectID = "9Z7-uO-fAa"; */
-"9Z7-uO-fAa.text" = "Settings";
+"9Z7-uO-fAa.text" = "innstillinger";
 
 /* Class = "UILabel"; text = "Last Name*"; ObjectID = "9ht-Pz-jWF"; */
-"9ht-Pz-jWF.text" = "Last Name*";
+"9ht-Pz-jWF.text" = "Etternavn*";
 
 /* Class = "UILabel"; text = "My tickets"; ObjectID = "AwE-I0-oTJ"; */
-"AwE-I0-oTJ.text" = "My tickets";
+"AwE-I0-oTJ.text" = "Mine billetter";
 
 /* Class = "UILabel"; text = "ACTIVE"; ObjectID = "B1T-Ry-EJE"; */
-"B1T-Ry-EJE.text" = "ACTIVE";
+"B1T-Ry-EJE.text" = "AKTIV";
 
 /* Class = "UITextField"; placeholder = "e.g 9158010101"; ObjectID = "B5H-Hb-bxG"; */
 "B5H-Hb-bxG.placeholder" = "e.g 9158010101";
 
 /* Class = "UILabel"; text = "Message*"; ObjectID = "BE3-fU-bYG"; */
-"BE3-fU-bYG.text" = "Message*";
+"BE3-fU-bYG.text" = "Budskap*";
 
 /* Class = "UILabel"; text = "Select Assignee"; ObjectID = "CGo-FQ-7Bg"; */
-"CGo-FQ-7Bg.text" = "Select Assignee";
+"CGo-FQ-7Bg.text" = "Velg Oppdragsgiver";
 
 /* Class = "UITextField"; placeholder = "e.g johnadmin@gmail.com"; ObjectID = "Cfj-9g-P0h"; */
 "Cfj-9g-P0h.placeholder" = "e.g johnadmin@gmail.com";
@@ -54,19 +54,19 @@
 "Dzc-oI-1TH.text" = "user_nameLabel";
 
 /* Class = "UILabel"; text = "Subject"; ObjectID = "E1F-Az-9Gv"; */
-"E1F-Az-9Gv.text" = "Subject";
+"E1F-Az-9Gv.text" = "Emne";
 
 /* Class = "UILabel"; text = "Label"; ObjectID = "EWf-QS-FDD"; */
-"EWf-QS-FDD.text" = "Label";
+"EWf-QS-FDD.text" = "Merkelapp";
 
 /* Class = "UITextField"; placeholder = "Select Priority"; ObjectID = "Fgz-Q4-nRj"; */
-"Fgz-Q4-nRj.placeholder" = "Select Priority";
+"Fgz-Q4-nRj.placeholder" = "Velg prioritet";
 
 /* Class = "UILabel"; text = "Assignee"; ObjectID = "FpM-1u-Pd3"; */
-"FpM-1u-Pd3.text" = "Assignee";
+"FpM-1u-Pd3.text" = "oppdragstakeren";
 
 /* Class = "UILabel"; text = "Mobile"; ObjectID = "Frf-Th-NDZ"; */
-"Frf-Th-NDZ.text" = "Mobile";
+"Frf-Th-NDZ.text" = "Mobil";
 
 /* Class = "UITextField"; placeholder = "e.g james123"; ObjectID = "GRB-yE-1jc"; */
 "GRB-yE-1jc.placeholder" = "e.g james123";
@@ -75,145 +75,145 @@
 "GZ9-QF-7oa.text" = "Email*";
 
 /* Class = "UISegmentedControl"; GzN-Yn-vAw.segmentTitles[0] = "Conversation"; ObjectID = "GzN-Yn-vAw"; */
-"GzN-Yn-vAw.segmentTitles[0]" = "Conversation";
+"GzN-Yn-vAw.segmentTitles[0]" = "Samtale";
 
 /* Class = "UISegmentedControl"; GzN-Yn-vAw.segmentTitles[1] = "View Details"; ObjectID = "GzN-Yn-vAw"; */
-"GzN-Yn-vAw.segmentTitles[1]" = "View Details";
+"GzN-Yn-vAw.segmentTitles[1]" = "Vis detaljer";
 
 /* Class = "UILabel"; text = "xxxxx@xxx.com"; ObjectID = "H5i-YI-b5K"; */
 "H5i-YI-b5K.text" = "xxxxx@xxx.com";
 
 /* Class = "UILabel"; text = "Code"; ObjectID = "H9P-hm-5RG"; */
-"H9P-hm-5RG.text" = "Code";
+"H9P-hm-5RG.text" = "Kode";
 
 /* Class = "UIButton"; normalTitle = "Submit"; ObjectID = "HJh-D0-l5V"; */
-"HJh-D0-l5V.normalTitle" = "Submit";
+"HJh-D0-l5V.normalTitle" = "Sende inn";
 
 /* Class = "UILabel"; text = "Ticket Type"; ObjectID = "HcY-5q-4Ba"; */
-"HcY-5q-4Ba.text" = "Ticket Type";
+"HcY-5q-4Ba.text" = "Billettype";
 
 /* Class = "UILabel"; text = "Cancel"; ObjectID = "I1L-6R-ykI"; */
-"I1L-6R-ykI.text" = "Cancel";
+"I1L-6R-ykI.text" = "Avbryt";
 
 /* Class = "UILabel"; text = "Priority"; ObjectID = "IIM-Xr-aOb"; */
-"IIM-Xr-aOb.text" = "Priority";
+"IIM-Xr-aOb.text" = "Prioritet";
 
 /* Class = "UILabel"; text = "Label"; ObjectID = "IgO-uU-MEH"; */
-"IgO-uU-MEH.text" = "Label";
+"IgO-uU-MEH.text" = "Merkelapp";
 
 /* Class = "UITextField"; placeholder = "*********"; ObjectID = "Ihd-1f-DFh"; */
 "Ihd-1f-DFh.placeholder" = "*********";
 
 /* Class = "UILabel"; text = "Assign"; ObjectID = "JCm-0R-nfM"; */
-"JCm-0R-nfM.text" = "Assign";
+"JCm-0R-nfM.text" = "Tildele";
 
 /* Class = "UILabel"; text = "Email*"; ObjectID = "JIl-7d-jKa"; */
-"JIl-7d-jKa.text" = "Email*";
+"JIl-7d-jKa.text" = "e-post*";
 
 /* Class = "UILabel"; text = "Last Name"; ObjectID = "JtR-kL-DPw"; */
-"JtR-kL-DPw.text" = "Last Name";
+"JtR-kL-DPw.text" = "Etternavn";
 
 /* Class = "UITextField"; placeholder = "yes or no"; ObjectID = "JzC-Ft-bBz"; */
-"JzC-Ft-bBz.placeholder" = "yes or no";
+"JzC-Ft-bBz.placeholder" = "Ja eller nei";
 
 /* Class = "UILabel"; text = "Unassigned tickets"; ObjectID = "K2r-lG-27s"; */
-"K2r-lG-27s.text" = "Unassigned tickets";
+"K2r-lG-27s.text" = "Ikke tildelt billetter";
 
 /* Class = "UILabel"; text = "Ticket list"; ObjectID = "Kwa-ua-KzA"; */
-"Kwa-ua-KzA.text" = "Ticket list";
+"Kwa-ua-KzA.text" = "Billettliste";
 
 /* Class = "UILabel"; text = "Source"; ObjectID = "LEh-KC-Dcy"; */
-"LEh-KC-Dcy.text" = "Source";
+"LEh-KC-Dcy.text" = "Kilde";
 
 /* Class = "UILabel"; text = "Assigned"; ObjectID = "LpV-Xc-HGm"; */
-"LpV-Xc-HGm.text" = "Assigned";
+"LpV-Xc-HGm.text" = "Tildelt";
 
 /* Class = "UILabel"; text = "HelpTopics"; ObjectID = "MUk-Eg-5aF"; */
 "MUk-Eg-5aF.text" = "HelpTopics";
 
 /* Class = "UILabel"; text = "username*"; ObjectID = "NUR-6Y-Tgd"; */
-"NUR-6Y-Tgd.text" = "username*";
+"NUR-6Y-Tgd.text" = "brukernavn*";
 
 /* Class = "UILabel"; text = "Multiple Tickets Assign"; ObjectID = "Ng8-Hr-UQN"; */
-"Ng8-Hr-UQN.text" = "Multiple Tickets Assign";
+"Ng8-Hr-UQN.text" = "Flere billetter tildeler";
 
 /* Class = "UILabel"; text = "COMPANY'S URL"; ObjectID = "NvZ-jN-SUK"; */
-"NvZ-jN-SUK.text" = "COMPANY'S URL";
+"NvZ-jN-SUK.text" = "SELSKAPETS URL";
 
 /* Class = "UILabel"; text = "Logout"; ObjectID = "Nwy-MN-km4"; */
-"Nwy-MN-km4.text" = "Logout";
+"Nwy-MN-km4.text" = "Logg ut";
 
 /* Class = "UILabel"; text = "Activate/Dectivate User : "; ObjectID = "OGx-Hl-HVV"; */
-"OGx-Hl-HVV.text" = "Activate/Dectivate User : ";
+"OGx-Hl-HVV.text" = "Aktiver / Dektiver bruker : ";
 
 /* Class = "UILabel"; text = "Password"; ObjectID = "OQM-lN-xDk"; */
-"OQM-lN-xDk.text" = "Password";
+"OQM-lN-xDk.text" = "Passord";
 
 /* Class = "UILabel"; text = "+91 999999999"; ObjectID = "OTI-p0-kg7"; */
 "OTI-p0-kg7.text" = "+91 999999999";
 
 /* Class = "UITextField"; placeholder = "Select Ticket type"; ObjectID = "Ob9-JG-vnz"; */
-"Ob9-JG-vnz.placeholder" = "Select Ticket type";
+"Ob9-JG-vnz.placeholder" = "Velg Billettype";
 
 /* Class = "UILabel"; text = "Ticket Status"; ObjectID = "P0f-ey-yeA"; */
-"P0f-ey-yeA.text" = "Ticket Status";
+"P0f-ey-yeA.text" = "Billettstatus";
 
 /* Class = "UILabel"; text = "ACZN-2015-0002015"; ObjectID = "PyQ-uW-FL5"; */
 "PyQ-uW-FL5.text" = "ACZN-2015-0002015";
 
 /* Class = "UILabel"; text = "Phone Number"; ObjectID = "Q7j-C5-RZB"; */
-"Q7j-C5-RZB.text" = "Phone Number";
+"Q7j-C5-RZB.text" = "Telefonnummer";
 
 /* Class = "UILabel"; text = "Label"; ObjectID = "Qtl-hD-TsO"; */
-"Qtl-hD-TsO.text" = "Label";
+"Qtl-hD-TsO.text" = "Merkelapp";
 
 /* Class = "UILabel"; text = "HelpTopics*"; ObjectID = "QyC-lw-kS2"; */
 "QyC-lw-kS2.text" = "HelpTopics*";
 
 /* Class = "UITextField"; placeholder = "select parent ticket"; ObjectID = "Row-J6-uNb"; */
-"Row-J6-uNb.placeholder" = "select parent ticket";
+"Row-J6-uNb.placeholder" = "velg foreldre billett";
 
 /* Class = "UILabel"; text = "First Name*"; ObjectID = "RyX-4Y-R3n"; */
-"RyX-4Y-R3n.text" = "First Name*";
+"RyX-4Y-R3n.text" = "Fornavn*";
 
 /* Class = "UILabel"; text = "Company"; ObjectID = "SsU-DK-T3a"; */
-"SsU-DK-T3a.text" = "Company";
+"SsU-DK-T3a.text" = "Selskap";
 
 /* Class = "UITextField"; placeholder = "e.g Whatson"; ObjectID = "TE8-6U-t8w"; */
 "TE8-6U-t8w.placeholder" = "e.g Whatson";
 
 /* Class = "UIButton"; normalTitle = "Submit"; ObjectID = "Tgk-R6-t7b"; */
-"Tgk-R6-t7b.normalTitle" = "Submit";
+"Tgk-R6-t7b.normalTitle" = "Sende inn";
 
 /* Class = "UILabel"; text = "Code"; ObjectID = "UFg-tX-fNF"; */
-"UFg-tX-fNF.text" = "Code";
+"UFg-tX-fNF.text" = "Kode";
 
 /* Class = "UIButton"; normalTitle = "Submit"; ObjectID = "Unu-1C-zRF"; */
-"Unu-1C-zRF.normalTitle" = "Submit";
+"Unu-1C-zRF.normalTitle" = "Sende inn";
 
 /* Class = "UILabel"; text = "ClientName"; ObjectID = "Uyc-xp-Avp"; */
-"Uyc-xp-Avp.text" = "ClientName";
+"Uyc-xp-Avp.text" = "Klientens navn";
 
 /* Class = "UIButton"; normalTitle = "Login"; ObjectID = "VP0-T6-DvK"; */
-"VP0-T6-DvK.normalTitle" = "Login";
+"VP0-T6-DvK.normalTitle" = "Logg Inn";
 
 /* Class = "UITextField"; placeholder = "select priority"; ObjectID = "VqM-IB-RGP"; */
-"VqM-IB-RGP.placeholder" = "select priority";
+"VqM-IB-RGP.placeholder" = "velg prioritet";
 
 /* Class = "UILabel"; text = "Priority"; ObjectID = "WgB-OR-Ttc"; */
-"WgB-OR-Ttc.text" = "Priority";
+"WgB-OR-Ttc.text" = "Prioritet";
 
 /* Class = "UILabel"; text = "Client list"; ObjectID = "Xj6-wM-O9Q"; */
-"Xj6-wM-O9Q.text" = "Client list";
+"Xj6-wM-O9Q.text" = "Klientliste";
 
 /* Class = "UILabel"; text = "-------"; ObjectID = "Xmx-EM-axR"; */
 "Xmx-EM-axR.text" = "-------";
 
 /* Class = "UILabel"; text = "Subject"; ObjectID = "YtT-lC-YH1"; */
-"YtT-lC-YH1.text" = "Subject";
+"YtT-lC-YH1.text" = "Emne";
 
 /* Class = "UILabel"; text = "Inbox tickets"; ObjectID = "Z79-JG-G6l"; */
-"Z79-JG-G6l.text" = "Inbox tickets";
+"Z79-JG-G6l.text" = "Innboksbilletter";
 
 /* Class = "UILabel"; text = "Faveo HELPDESK"; ObjectID = "ZIG-RQ-ubz"; */
 "ZIG-RQ-ubz.text" = "Faveo HELPDESK";
@@ -222,91 +222,91 @@
 "ZMh-JL-4Z6.placeholder" = "e.g 02306418817";
 
 /* Class = "UILabel"; text = "Ticket Type"; ObjectID = "aLv-0G-1w5"; */
-"aLv-0G-1w5.text" = "Ticket Type";
+"aLv-0G-1w5.text" = "Billettype";
 
 /* Class = "UILabel"; text = "About"; ObjectID = "aVs-YL-pOr"; */
-"aVs-YL-pOr.text" = "About";
+"aVs-YL-pOr.text" = "Handle om";
 
 /* Class = "UITextField"; placeholder = "select department"; ObjectID = "ae6-Sv-cH7"; */
-"ae6-Sv-cH7.placeholder" = "select department";
+"ae6-Sv-cH7.placeholder" = "velg avdeling";
 
 /* Class = "UILabel"; text = "Select Assignee "; ObjectID = "arg-nN-OT1"; */
-"arg-nN-OT1.text" = "Select Assignee ";
+"arg-nN-OT1.text" = "Velg Oppdragsgiver ;
 
 /* Class = "UILabel"; text = "Select Assignee"; ObjectID = "bAg-Uv-bfb"; */
-"bAg-Uv-bfb.text" = "Select Assignee";
+"bAg-Uv-bfb.text" = "Velg Oppdragsgiver";
 
 /* Class = "UILabel"; text = "Cancel"; ObjectID = "bmF-UM-0hT"; */
-"bmF-UM-0hT.text" = "Cancel";
+"bmF-UM-0hT.text" = "Avbryt";
 
 /* Class = "UILabel"; text = "Priority"; ObjectID = "cVJ-oB-fVS"; */
-"cVJ-oB-fVS.text" = "Priority";
+"cVJ-oB-fVS.text" = "Prioritet";
 
 /* Class = "UIButton"; normalTitle = "Website"; ObjectID = "dBA-ZM-uZ7"; */
-"dBA-ZM-uZ7.normalTitle" = "Website";
+"dBA-ZM-uZ7.normalTitle" = "nettsted";
 
 /* Class = "UITextField"; placeholder = "Select Assignee"; ObjectID = "dFS-pk-TpB"; */
-"dFS-pk-TpB.placeholder" = "Select Assignee";
+"dFS-pk-TpB.placeholder" = "Velg Oppdragsgiver";
 
 /* Class = "UITextField"; placeholder = "Select Ticket type"; ObjectID = "dhv-jE-SLP"; */
-"dhv-jE-SLP.placeholder" = "Select Ticket type";
+"dhv-jE-SLP.placeholder" = "Velg Billettype";
 
 /* Class = "UILabel"; text = "version: 1.7.9"; ObjectID = "dkk-3v-jiw"; */
-"dkk-3v-jiw.text" = "version: 1.7.9";
+"dkk-3v-jiw.text" = "versjon: 1.7.9";
 
 /* Class = "UILabel"; text = "user_role"; ObjectID = "eaU-wh-His"; */
-"eaU-wh-His.text" = "user_role";
+"eaU-wh-His.text" = "USER_ROLE";
 
 /* Class = "UILabel"; text = "Mobile"; ObjectID = "eiY-Rq-ac5"; */
-"eiY-Rq-ac5.text" = "Mobile";
+"eiY-Rq-ac5.text" = "Mobil";
 
 /* Class = "UILabel"; text = "999999999"; ObjectID = "fQK-HK-ch8"; */
 "fQK-HK-ch8.text" = "999999999";
 
 /* Class = "UILabel"; text = "user_url"; ObjectID = "ghH-8G-sXb"; */
-"ghH-8G-sXb.text" = "user_url";
+"ghH-8G-sXb.text" = "USER_URL";
 
 /* Class = "UILabel"; text = "First Name*"; ObjectID = "hNf-fP-ORr"; */
-"hNf-fP-ORr.text" = "First Name*";
+"hNf-fP-ORr.text" = "Fornavn*";
 
 /* Class = "UILabel"; text = "Merge"; ObjectID = "hWd-br-rhu"; */
-"hWd-br-rhu.text" = "Merge";
+"hWd-br-rhu.text" = "Slå sammen";
 
 /* Class = "UITextField"; placeholder = "Ex: +91"; ObjectID = "ist-CM-MqC"; */
 "ist-CM-MqC.placeholder" = "Ex: +91";
 
 /* Class = "UILabel"; text = "Trash tickets"; ObjectID = "jNK-32-X7O"; */
-"jNK-32-X7O.text" = "Trash tickets";
+"jNK-32-X7O.text" = "Papirkurv";
 
 /* Class = "UILabel"; text = "Created Date"; ObjectID = "kqZ-U5-dYo"; */
-"kqZ-U5-dYo.text" = "Created Date";
+"kqZ-U5-dYo.text" = "opprettet dato";
 
 /* Class = "UILabel"; text = "Reason For Merging"; ObjectID = "lMG-P4-7dm"; */
-"lMG-P4-7dm.text" = "Reason For Merging";
+"lMG-P4-7dm.text" = "Årsak til sammenslåing";
 
 /* Class = "UILabel"; text = "Department"; ObjectID = "lQp-Ka-vpS"; */
-"lQp-Ka-vpS.text" = "Department";
+"lQp-Ka-vpS.text" = "Avdeling";
 
 /* Class = "UITextField"; placeholder = "select ticket status"; ObjectID = "ljr-Rc-Zi2"; */
-"ljr-Rc-Zi2.placeholder" = "select ticket status";
+"ljr-Rc-Zi2.placeholder" = "velg billettstatus";
 
 /* Class = "UITextField"; placeholder = "Select Ticket type"; ObjectID = "lvB-za-5rE"; */
-"lvB-za-5rE.placeholder" = "Select Ticket type";
+"lvB-za-5rE.placeholder" = "Velg Billettype";
 
 /* Class = "UILabel"; text = "Priority*"; ObjectID = "mCO-gF-wNs"; */
-"mCO-gF-wNs.text" = "Priority*";
+"mCO-gF-wNs.text" = "Prioritet*";
 
 /* Class = "UILabel"; text = "Requester*"; ObjectID = "mEi-tm-bVi"; */
 "mEi-tm-bVi.text" = "Requester*";
 
 /* Class = "UILabel"; text = "Create ticket"; ObjectID = "oTB-RY-cvo"; */
-"oTB-RY-cvo.text" = "Create ticket";
+"oTB-RY-cvo.text" = "Lag billett";
 
 /* Class = "UILabel"; text = "status"; ObjectID = "ov5-ne-izY"; */
 "ov5-ne-izY.text" = "status";
 
 /* Class = "UILabel"; text = "Username/Email"; ObjectID = "p7x-HL-8O0"; */
-"p7x-HL-8O0.text" = "Username/Email";
+"p7x-HL-8O0.text" = "Brukernavn / e-post";
 
 /* Class = "UITextField"; placeholder = "e.g demoemail@gmail.com"; ObjectID = "pFh-RR-fGj"; */
 "pFh-RR-fGj.placeholder" = "e.g demoemail@gmail.com";
@@ -315,52 +315,52 @@
 "pHw-NS-yQW.placeholder" = "e.g James";
 
 /* Class = "UITextField"; placeholder = "select ticket types"; ObjectID = "pqT-GU-iEl"; */
-"pqT-GU-iEl.placeholder" = "select ticket types";
+"pqT-GU-iEl.placeholder" = "velg billetttyper";
 
 /* Class = "UILabel"; text = "First Name*"; ObjectID = "saY-9A-5ZP"; */
-"saY-9A-5ZP.text" = "First Name*";
+"saY-9A-5ZP.text" = "Fornavn*";
 
 /* Class = "UILabel"; text = "Label"; ObjectID = "sqb-1I-Kra"; */
-"sqb-1I-Kra.text" = "Label";
+"sqb-1I-Kra.text" = "Merkelapp";
 
 /* Class = "UITextField"; placeholder = "Select Ticket type"; ObjectID = "tU1-Yn-czE"; */
-"tU1-Yn-czE.placeholder" = "Select Ticket type";
+"tU1-Yn-czE.placeholder" = "Velg Billettype";
 
 /* Class = "UILabel"; text = "Mobile"; ObjectID = "uu9-Re-cin"; */
-"uu9-Re-cin.text" = "Mobile";
+"uu9-Re-cin.text" = "Mobil";
 
 /* Class = "UILabel"; text = "Last Response date"; ObjectID = "v6I-fo-Qk7"; */
-"v6I-fo-Qk7.text" = "Last Response date";
+"v6I-fo-Qk7.text" = "Siste svardato";
 
 /* Class = "UITextField"; placeholder = "Select Helptopic"; ObjectID = "vCW-en-No4"; */
-"vCW-en-No4.placeholder" = "Select Helptopic";
+"vCW-en-No4.placeholder" = "Velg Helptopisk";
 
 /* Class = "UILabel"; text = "Ticket Source"; ObjectID = "vb6-av-EO3"; */
-"vb6-av-EO3.text" = "Ticket Source";
+"vb6-av-EO3.text" = "Billettkilde";
 
 /* Class = "UITextField"; placeholder = "e.g http://faveohelpdesk.com/support"; ObjectID = "w0x-e5-ocS"; */
 "w0x-e5-ocS.placeholder" = "e.g http://faveohelpdesk.com/support";
 
 /* Class = "UILabel"; text = "Email"; ObjectID = "wG0-eC-tXa"; */
-"wG0-eC-tXa.text" = "Email";
+"wG0-eC-tXa.text" = "e-post";
 
 /* Class = "UILabel"; text = "Due Date"; ObjectID = "wng-Ip-NAi"; */
-"wng-Ip-NAi.text" = "Due Date";
+"wng-Ip-NAi.text" = "Tidsfrist";
 
 /* Class = "UITextField"; placeholder = "select ticket source"; ObjectID = "x8W-6L-2y4"; */
-"x8W-6L-2y4.placeholder" = "select ticket source";
+"x8W-6L-2y4.placeholder" = "velg billettkilde";
 
 /* Class = "UILabel"; text = "Name"; ObjectID = "xnd-Np-ySp"; */
-"xnd-Np-ySp.text" = "Name";
+"xnd-Np-ySp.text" = "Navn";
 
 /* Class = "UILabel"; text = "www.faveohelpdesk.com"; ObjectID = "xol-WZ-dRz"; */
 "xol-WZ-dRz.text" = "www.faveohelpdesk.com";
 
 /* Class = "UILabel"; text = "Last Name*"; ObjectID = "yOD-Uh-3Rh"; */
-"yOD-Uh-3Rh.text" = "Last Name*";
+"yOD-Uh-3Rh.text" = "Etternavn*";
 
 /* Class = "UILabel"; text = "Label"; ObjectID = "ydE-5f-N3n"; */
-"ydE-5f-N3n.text" = "Label";
+"ydE-5f-N3n.text" = "Merkelapp";
 
 /* Class = "UITextField"; placeholder = "Select Ticket type"; ObjectID = "zIf-YW-IAe"; */
-"zIf-YW-IAe.placeholder" = "Select Ticket type";
+"zIf-YW-IAe.placeholder" = "Velg Billettype";
