--- a/Faveo Helpdesk Pro/pt-PT.lproj/Main.strings
+++ b/Faveo Helpdesk Pro/pt-PT.lproj/Main.strings
@@ -1,45 +1,45 @@
 
 /* Class = "UILabel"; text = "Closed tickets"; ObjectID = "00M-ZV-gxI"; */
-"00M-ZV-gxI.text" = "Closed tickets";
+"00M-ZV-gxI.text" = "Bilhetes fechados";
 
 /* Class = "UILabel"; text = "Last Name*"; ObjectID = "0LL-vd-wv1"; */
-"0LL-vd-wv1.text" = "Last Name*";
+"0LL-vd-wv1.text" = "Último nome*";
 
 /* Class = "UILabel"; text = "Sla Plans"; ObjectID = "437-01-M12"; */
-"437-01-M12.text" = "Sla Plans";
+"437-01-M12.text" = "Planos Sla";
 
 /* Class = "UILabel"; text = "Email"; ObjectID = "6Mo-Z2-qgf"; */
-"6Mo-Z2-qgf.text" = "Email";
+"6Mo-Z2-qgf.text" = "O email";
 
 /* Class = "UILabel"; text = "Subject*"; ObjectID = "7x1-4m-H9y"; */
-"7x1-4m-H9y.text" = "Subject*";
+"7x1-4m-H9y.text" = "Sujeito*";
 
 /* Class = "UILabel"; text = "Last Name"; ObjectID = "9NB-2Q-SIV"; */
-"9NB-2Q-SIV.text" = "Last Name";
+"9NB-2Q-SIV.text" = "Último nome";
 
 /* Class = "UILabel"; text = "Settings"; ObjectID = "9Z7-uO-fAa"; */
-"9Z7-uO-fAa.text" = "Settings";
+"9Z7-uO-fAa.text" = "Configurações";
 
 /* Class = "UILabel"; text = "Client Name"; ObjectID = "AmR-Cc-CWB"; */
-"AmR-Cc-CWB.text" = "Cliente";
+"AmR-Cc-CWB.text" = "Nome do cliente";
 
 /* Class = "UILabel"; text = "My tickets"; ObjectID = "AwE-I0-oTJ"; */
-"AwE-I0-oTJ.text" = "My tickets";
+"AwE-I0-oTJ.text" = "Meus ingressos";
 
 /* Class = "UILabel"; text = "ACTIVE"; ObjectID = "B1T-Ry-EJE"; */
-"B1T-Ry-EJE.text" = "ACTIVE";
+"B1T-Ry-EJE.text" = "ATIVO";
 
 /* Class = "UITextField"; placeholder = "Select SLA"; ObjectID = "CgG-Am-WVW"; */
-"CgG-Am-WVW.placeholder" = "Select SLA";
+"CgG-Am-WVW.placeholder" = "Selecione SLA";
 
 /* Class = "UILabel"; text = "Subject"; ObjectID = "E1F-Az-9Gv"; */
-"E1F-Az-9Gv.text" = "Subject";
+"E1F-Az-9Gv.text" = "Sujeito";
 
 /* Class = "UITextField"; placeholder = "Select Priority"; ObjectID = "Fgz-Q4-nRj"; */
-"Fgz-Q4-nRj.placeholder" = "Select Priority";
+"Fgz-Q4-nRj.placeholder" = "Selecione Prioridade";
 
 /* Class = "UILabel"; text = "Department*"; ObjectID = "Ftd-As-0ie"; */
-"Ftd-As-0ie.text" = "Department*";
+"Ftd-As-0ie.text" = "Departamento*";
 
 /* Class = "UILabel"; text = "HelpTopics"; ObjectID = "G6t-w8-5gE"; */
 "G6t-w8-5gE.text" = "HelpTopics";
@@ -48,37 +48,37 @@
 "Gsy-RY-3zo.placeholder" = "Ex: 9999999999";
 
 /* Class = "UISegmentedControl"; GzN-Yn-vAw.segmentTitles[0] = "Conversation"; ObjectID = "GzN-Yn-vAw"; */
-"GzN-Yn-vAw.segmentTitles[0]" = "Conversation";
+"GzN-Yn-vAw.segmentTitles[0]" = "Conversação";
 
 /* Class = "UISegmentedControl"; GzN-Yn-vAw.segmentTitles[1] = "Detail"; ObjectID = "GzN-Yn-vAw"; */
-"GzN-Yn-vAw.segmentTitles[1]" = "Detail";
+"GzN-Yn-vAw.segmentTitles[1]" = "Detalhe";
 
 /* Class = "UILabel"; text = "jhbafbas@gmail.com"; ObjectID = "H5i-YI-b5K"; */
 "H5i-YI-b5K.text" = "jhbafbas@gmail.com";
 
 /* Class = "UILabel"; text = "Priority"; ObjectID = "ImK-IA-DcU"; */
-"ImK-IA-DcU.text" = "Priority";
+"ImK-IA-DcU.text" = "Prioridade";
 
 /* Class = "UILabel"; text = "Unassigned tickets"; ObjectID = "K2r-lG-27s"; */
-"K2r-lG-27s.text" = "Unassigned tickets";
+"K2r-lG-27s.text" = "Bilhetes não atribuídos";
 
 /* Class = "UILabel"; text = "Message*"; ObjectID = "KL7-aF-noB"; */
-"KL7-aF-noB.text" = "Message*";
+"KL7-aF-noB.text" = "mensagem*";
 
 /* Class = "UILabel"; text = "Ticket list"; ObjectID = "Kwa-ua-KzA"; */
-"Kwa-ua-KzA.text" = "Ticket list";
+"Kwa-ua-KzA.text" = "Lista de ingressos";
 
 /* Class = "UILabel"; text = "COMPANY'S URL"; ObjectID = "NvZ-jN-SUK"; */
-"NvZ-jN-SUK.text" = "COMPANY'S URL";
+"NvZ-jN-SUK.text" = "URL DA EMPRESA";
 
 /* Class = "UILabel"; text = "Logout"; ObjectID = "Nwy-MN-km4"; */
-"Nwy-MN-km4.text" = "Logout";
+"Nwy-MN-km4.text" = "Sair";
 
 /* Class = "UITextField"; placeholder = "Select Helptopic"; ObjectID = "OIR-WQ-j9s"; */
 "OIR-WQ-j9s.placeholder" = "Select Helptopic";
 
 /* Class = "UILabel"; text = "Passcode"; ObjectID = "OQM-lN-xDk"; */
-"OQM-lN-xDk.text" = "Passcode";
+"OQM-lN-xDk.text" = "Senha";
 
 /* Class = "UILabel"; text = "+91 9482189901"; ObjectID = "OTI-p0-kg7"; */
 "OTI-p0-kg7.text" = "+91 9482189901";
@@ -93,31 +93,31 @@
 "SbQ-76-SUZ.placeholder" = "Select Status";
 
 /* Class = "UILabel"; text = "Code"; ObjectID = "UFg-tX-fNF"; */
-"UFg-tX-fNF.text" = "Code";
+"UFg-tX-fNF.text" = "Código";
 
 /* Class = "UIButton"; normalTitle = "Submit"; ObjectID = "Unu-1C-zRF"; */
-"Unu-1C-zRF.normalTitle" = "Submit";
+"Unu-1C-zRF.normalTitle" = "Enviar";
 
 /* Class = "UILabel"; text = "ACZN-2015-0002015"; ObjectID = "Uyc-xp-Avp"; */
 "Uyc-xp-Avp.text" = "ACZN-2015-0002015";
 
 /* Class = "UITextField"; placeholder = "Select Source"; ObjectID = "VJe-Gu-Kf0"; */
-"VJe-Gu-Kf0.placeholder" = "Select Source";
+"VJe-Gu-Kf0.placeholder" = "Selecione a fonte";
 
 /* Class = "UIButton"; normalTitle = "Login"; ObjectID = "VP0-T6-DvK"; */
-"VP0-T6-DvK.normalTitle" = "Login";
+"VP0-T6-DvK.normalTitle" = "Entrar";
 
 /* Class = "UITextField"; placeholder = "Select Department"; ObjectID = "VRM-vp-sUX"; */
-"VRM-vp-sUX.placeholder" = "Select Department";
+"VRM-vp-sUX.placeholder" = "Selecione Departamento";
 
 /* Class = "UILabel"; text = "Client list"; ObjectID = "Xj6-wM-O9Q"; */
-"Xj6-wM-O9Q.text" = "Client list";
+"Xj6-wM-O9Q.text" = "Lista de clientes";
 
 /* Class = "UILabel"; text = "Anuj"; ObjectID = "Xmx-EM-axR"; */
 "Xmx-EM-axR.text" = "Anuj";
 
 /* Class = "UILabel"; text = "Created Date"; ObjectID = "YWC-xC-yYI"; */
-"YWC-xC-yYI.text" = "Created Date";
+"YWC-xC-yYI.text" = "data criada";
 
 /* Class = "UILabel"; text = "Inbox tickets"; ObjectID = "Z79-JG-G6l"; */
 "Z79-JG-G6l.text" = "Inbox tickets";
@@ -126,73 +126,73 @@
 "ZIG-RQ-ubz.text" = "Faveo HELPDESK";
 
 /* Class = "UILabel"; text = "About"; ObjectID = "aVs-YL-pOr"; */
-"aVs-YL-pOr.text" = "About";
+"aVs-YL-pOr.text" = "Sobre";
 
 /* Class = "UITextField"; placeholder = "Select Dept"; ObjectID = "cF2-G6-BWv"; */
-"cF2-G6-BWv.placeholder" = "Select Dept";
+"cF2-G6-BWv.placeholder" = "Selecione Dept";
 
 /* Class = "UIButton"; normalTitle = "Website"; ObjectID = "dBA-ZM-uZ7"; */
-"dBA-ZM-uZ7.normalTitle" = "Website";
+"dBA-ZM-uZ7.normalTitle" = "Local na rede Internet";
 
 /* Class = "UILabel"; text = "version: 1.0"; ObjectID = "dkk-3v-jiw"; */
 "dkk-3v-jiw.text" = "version: 1.0";
 
 /* Class = "UITextView"; text = "Headquartered in Bangalore, Faveo HELPDESK provides Businesses with an automated Helpdesk system to manage customer support.The word Faveo comes from Latin which means to be favourable. Which truly highlights vision and the scope as well as the functionality of the product that Faveo is. It is specifically designed to cater the needs of startups and SME’s empowering them with state of art, ticket based support system. In today’s competitive startup scenario customer retention is one of the major challenges. Handling client query diligently is all the difference between retaining or losing a long lasting relationship. The company is driven with passion of providing tools for managing consumer queries for strategic insights and helping companies take those decisive decisions."; ObjectID = "eVd-3F-lkE"; */
-"eVd-3F-lkE.text" = "Headquartered in Bangalore, Faveo HELPDESK provides Businesses with an automated Helpdesk system to manage customer support.The word Faveo comes from Latin which means to be favourable. Which truly highlights vision and the scope as well as the functionality of the product that Faveo is. It is specifically designed to cater the needs of startups and SME’s empowering them with state of art, ticket based support system. In today’s competitive startup scenario customer retention is one of the major challenges. Handling client query diligently is all the difference between retaining or losing a long lasting relationship. The company is driven with passion of providing tools for managing consumer queries for strategic insights and helping companies take those decisive decisions.";
+"eVd-3F-lkE.text" = "Sediada em Bangalore, Faveo, a HELPDESK fornece às empresas um sistema automatizado de Helpdesk para gerenciar o suporte ao cliente.A palavra Faveo vem do latim, que significa ser favorável. O que realmente destaca a visão e o escopo, bem como a funcionalidade do produto que o Faveo é. Ele é projetado especificamente para atender às necessidades das startups e das PMEs, capacitando-as com o estado do sistema de suporte baseado em tickets.No atual cenário de startups competitivo, a retenção de clientes é um dos maiores desafios. Lidar com a consulta do cliente com diligência é toda a diferença entre manter ou perder um relacionamento duradouro. A empresa é motivada pela paixão de fornecer ferramentas para gerenciar as consultas dos consumidores para obter insights estratégicos e ajudar as empresas a tomarem essas decisões decisivas.";
 
 /* Class = "UILabel"; text = "Phone"; ObjectID = "eiY-Rq-ac5"; */
-"eiY-Rq-ac5.text" = "Phone";
+"eiY-Rq-ac5.text" = "telefone";
 
 /* Class = "UILabel"; text = "First Name*"; ObjectID = "hNf-fP-ORr"; */
-"hNf-fP-ORr.text" = "First Name*";
+"hNf-fP-ORr.text" = "Primeiro nome*";
 
 /* Class = "UITextField"; placeholder = "Ex: +91"; ObjectID = "ist-CM-MqC"; */
 "ist-CM-MqC.placeholder" = "Ex: +91";
 
 /* Class = "UILabel"; text = "Trash tickets"; ObjectID = "jNK-32-X7O"; */
-"jNK-32-X7O.text" = "Trash tickets";
+"jNK-32-X7O.text" = "Lixeira";
 
 /* Class = "UILabel"; text = "Priority*"; ObjectID = "mCO-gF-wNs"; */
-"mCO-gF-wNs.text" = "Priority*";
+"mCO-gF-wNs.text" = "Prioridade*";
 
 /* Class = "UILabel"; text = "Email*"; ObjectID = "mEi-tm-bVi"; */
-"mEi-tm-bVi.text" = "Email*";
+"mEi-tm-bVi.text" = "O email*";
 
 /* Class = "UILabel"; text = "Sla Plans*"; ObjectID = "mFD-SZ-woH"; */
-"mFD-SZ-woH.text" = "Sla Plans*";
+"mFD-SZ-woH.text" = "Planos Sla*";
 
 /* Class = "UITextField"; placeholder = "Select Sla"; ObjectID = "mxh-V7-yKk"; */
-"mxh-V7-yKk.placeholder" = "Select Sla";
+"mxh-V7-yKk.placeholder" = "Selecione Sla";
 
 /* Class = "UILabel"; text = "Create ticket"; ObjectID = "oTB-RY-cvo"; */
-"oTB-RY-cvo.text" = "Create ticket";
+"oTB-RY-cvo.text" = "Criar ticket";
 
 /* Class = "UILabel"; text = "Department"; ObjectID = "oun-g4-t0F"; */
-"oun-g4-t0F.text" = "Department";
+"oun-g4-t0F.text" = "Departamento";
 
 /* Class = "UILabel"; text = "Username"; ObjectID = "p7x-HL-8O0"; */
-"p7x-HL-8O0.text" = "Username";
+"p7x-HL-8O0.text" = "Nome de usuário";
 
 /* Class = "UILabel"; text = "Source"; ObjectID = "trq-0Z-m8M"; */
-"trq-0Z-m8M.text" = "Source";
+"trq-0Z-m8M.text" = "Fonte";
 
 /* Class = "UITextField"; placeholder = "Select Priority"; ObjectID = "uMQ-L7-CIX"; */
-"uMQ-L7-CIX.placeholder" = "Select Priority";
+"uMQ-L7-CIX.placeholder" = "Selecione Prioridade";
 
 /* Class = "UILabel"; text = "Last Response date"; ObjectID = "v6I-fo-Qk7"; */
-"v6I-fo-Qk7.text" = "Last Response date";
+"v6I-fo-Qk7.text" = "Data da última resposta";
 
 /* Class = "UITextField"; placeholder = "Select Helptopic"; ObjectID = "vCW-en-No4"; */
-"vCW-en-No4.placeholder" = "Select Helptopic";
+"vCW-en-No4.placeholder" = "Selecione Helptópico";
 
 /* Class = "UIButton"; normalTitle = "Save"; ObjectID = "w8G-FB-g9d"; */
-"w8G-FB-g9d.normalTitle" = "Save";
+"w8G-FB-g9d.normalTitle" = "Salve ";
 
 /* Class = "UILabel"; text = "First Name"; ObjectID = "wMb-MW-vQq"; */
-"wMb-MW-vQq.text" = "First Name";
+"wMb-MW-vQq.text" = "Primeiro nome";
 
 /* Class = "UILabel"; text = "Due Date"; ObjectID = "xFf-Wq-nyR"; */
-"xFf-Wq-nyR.text" = "Due Date";
+"xFf-Wq-nyR.text" = "Data de Vencimento";
 
 /* Class = "UILabel"; text = "www.faveohelpdesk.com"; ObjectID = "xol-WZ-dRz"; */
 "xol-WZ-dRz.text" = "www.faveohelpdesk.com";
